docs/0.9.x/index.md
#xTend 0.9.x
###What is xTend?
xTend is a PHP MVC framework. While other frameworks, such as Laravel, are focusing on implementing every feature or function a developer could ever want, xTend is focused on keeping it fast, adatable, extendable and non-bloated. This means there is a lot of built-in features you'll find in Laravel you will not find here, though because of the adaptable and extendable nature of xTend it is extremely easy to add a library, or your own script, to enable a certain feature.

###What's in it for me?
* Dependency free
* Simple packagist support
* Clean and powerful URL's
* Easy to understand structure (Model-View-Controller)
* Easy to setup and configure
* Easy to adapt and extend
* Blazing fast
* Easily customizable templating engine
* A lot of helper functions to keep your code clean
* A simple CLI to do basic interactions

*Notice I ran some benchmarks using the `ab -c 10 -t 3` command and I average at around 650 rps on Lighttpd with PHP-CGI*

###I got some questions
You can always send me a message on either [gitter](http://gitter.im) or using [email](mailto:hi@liammartens.com)
